c4prj2_input/grade.txt
Grading at Fri Jul 31 10:27:58 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:37:64: error: expected ‘)’ before ‘;’ token
        add_card_to(answer[i],card_from_letters(first,*line_ind);
                                                                ^
input.c:38:6: error: expected ‘;’ before ‘}’ token
      }
      ^
Compilation of input.c failed

Overall Grade: F
